[EDIT] create boxes

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
   <!-- CSS -->
   <link rel="stylesheet" href="CSS/style.css">
 
-    <div>
-      <ul class="lista">
+    <div class="container ">
+      <div class="boxes">
         
 
-      </ul> 
-
+      </div> 
     </div>
+
+    
 
   <title>FIZZBUZZ</title>
 </head>
