[EDIT] create boxes

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="CSS/style.css">
 
     <div class="container ">
-      <div class="boxes">
+      <div class="boxes d-flex ">
+        <div class="box"></div>
         
 
       </div> 
